--- a/styles/style.css
+++ b/styles/style.css
@@ -88,3 +88,21 @@ body {
 
     color: #FFFFFF;
 }
+
+
+.tg-shape{
+    position: absolute;
+    width: 786px;
+    height: 32px;
+    left: 61px;
+    top: 680px;
+    
+    }
+    
+    #tg-shape-btn{
+    position: absolute;
+    width: 160px;
+    height: 30px;
+    border-radius: 40px;
+    background: linear-gradient(90deg, rgba(255,0,299) 0%, rgba(232,20,230) 35%, rgba(98,135,235) 100%);
+    }
