--- a/styles/style.css
+++ b/styles/style.css
@@ -99,10 +99,18 @@ body {
     
     }
     
-    #tg-shape-btn{
+#tg-shape-btn{
     position: absolute;
     width: 160px;
     height: 30px;
     border-radius: 40px;
     background: linear-gradient(90deg, rgba(255,0,299) 0%, rgba(232,20,230) 35%, rgba(98,135,235) 100%);
+    }
+
+#telegram-image{
+    position: absolute;
+    width: 35px;
+    height: 50px;
+    z-index: 1;
+    bottom: -10px;
     }
