--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,9 @@ body {
     color: #ffff;
     text-align: center;
 }
-.navbar-text{
-    color:#FFFFFF;
+
+.navbar-text {
+    color: #FFFFFF;
 }
 
 .button {
@@ -36,6 +37,31 @@ body {
     border-color: #FF00E5;
     border-radius: 30px;
 } */
+.main-homepage{
+    position: relative;
+}
+
+.both-wrapper-home {
+    display: grid;
+    /* height: auto; */
+    width: 100%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    padding-top: 40px;
+}
+
+.second-half{
+    position: relative;
+    z-index: 9;
+}
+
+#img-bf{
+    position: absolute;
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    z-index: 100;
+}
 
 .heading-text {
     position: absolute;
@@ -90,27 +116,49 @@ body {
 }
 
 
-.tg-shape{
+.tg-shape {
     position: absolute;
     width: 786px;
     height: 32px;
     left: 61px;
     top: 680px;
-    
-    }
-    
-#tg-shape-btn{
+
+}
+
+#tg-shape-btn {
     position: absolute;
     width: 160px;
     height: 30px;
     border-radius: 40px;
-    background: linear-gradient(90deg, rgba(255,0,299) 0%, rgba(232,20,230) 35%, rgba(98,135,235) 100%);
-    }
+    background: linear-gradient(90deg, rgba(255, 0, 299) 0%, rgba(232, 20, 230) 35%, rgba(98, 135, 235) 100%);
+}
 
-#telegram-image{
+#telegram-image {
     position: absolute;
     width: 35px;
     height: 50px;
     z-index: 1;
     bottom: -10px;
-    }
+}
+
+
+.center-page{
+    position: absolute;
+    top:50rem;
+    background: linear-gradient(180deg, rgba(5, 5, 5) 9%, rgba(38, 5, 38) 45%);
+    width: 100%;
+    height: 30rem;
+}
+
+.text-center-v{
+    position: absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 112%;
+    text-transform: uppercase;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding-left: 81px;
+    margin-top: 79px;
+}
