--- a/styles/home.css
+++ b/styles/home.css
@@ -14,10 +14,6 @@
     color: #FFFFFF;
 }
 
-#subheading-text {
-    color: #FF00E5;
-}
-
 #qtag {
     position: absolute;
     width: 786px;
@@ -49,4 +45,20 @@
     text-transform: capitalize;
 
     color: #FFFFFF;
+}
+
+#tg-shape-btn {
+    width: 160px;
+    height: 30px;
+    border-radius: 40px;
+    background: linear-gradient(90deg, rgba(255, 0, 299) 0%, rgba(232, 20, 230) 35%, rgba(98, 135, 235) 100%);
+}
+
+#telegram-image {
+    width: 35px;
+    height: 50px;
+}
+
+.second-row{
+    background: linear-gradient(185deg, rgba(5, 5, 5) 12%, rgba(38, 5, 38) 50%);
 }
