--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     background-color: black;
     font-family: 'Poppins';
@@ -28,6 +29,27 @@ body {
     width: auto;
 }
 
+.text-content{
+    font-weight: 400;
+    line-height: 27px;
+    font-size: 18px;
+    color: #FFFF;
+}
+
+.text-content-heading{
+    font-weight: 500;
+    line-height: 35px;
+    font-size: 25px;
+    color: #FFFF;
+}
+
+.main-title{
+    font-weight: 1000;
+    line-height: 49.28px;
+    font-size: 44px;
+    color: #FF00E5;
+}
+
 /* 
 .btn-primary:hover {
     color: #fff;
@@ -35,131 +57,6 @@ body {
     border-color: #FF00E5;
     border-radius: 30px;
 } */
-.main-homepage{
-    position: relative;
-}
-
-.both-wrapper-home {
-    display: grid;
-    /* height: auto; */
-    width: 100%;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-    padding-top: 40px;
-}
-
-.second-half{
-    position: relative;
-    z-index: 9;
-}
-
-#img-bf{
-    position: absolute;
-    background-color: red;
-    width: 10px;
-    height: 10px;
-    z-index: 100;
-}
-
-.heading-text {
-    position: absolute;
-    width: 703px;
-    height: 134px;
-    left: 61px;
-    top: 293px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 60px;
-    line-height: 112%;
-    text-transform: uppercase;
-    color: #FFFFFF;
-}
-
-#subheading-text {
-    color: #FF00E5;
-}
-
-#qtag {
-    position: absolute;
-    width: 786px;
-    height: 32px;
-    left: 61px;
-    top: 520px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 21px;
-    line-height: 28px;
-    text-transform: capitalize;
-    color: #FFFFFF;
-}
-
-#helo {
-    position: absolute;
-    width: 527px;
-    height: 58px;
-    left: 61px;
-    top: 577px;
-
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 28px;
-    text-transform: capitalize;
-
-    color: #FFFFFF;
-}
-
-
-.tg-shape {
-    position: absolute;
-    width: 786px;
-    height: 32px;
-    left: 61px;
-    top: 680px;
-
-}
-
-#tg-shape-btn {
-    position: absolute;
-    width: 160px;
-    height: 30px;
-    border-radius: 40px;
-    background: linear-gradient(90deg, rgba(255, 0, 299) 0%, rgba(232, 20, 230) 35%, rgba(98, 135, 235) 100%);
-}
-
-#telegram-image {
-    position: absolute;
-    width: 35px;
-    height: 50px;
-    z-index: 1;
-    bottom: -10px;
-}
-
-
-.center-page{
-    position: absolute;
-    top:50rem;
-    background: linear-gradient(180deg, rgba(5, 5, 5) 9%, rgba(38, 5, 38) 45%);
-    width: 100%;
-    height: 30rem;
-}
-
-.text-center-v{
-    position: absolute;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 44px;
-    line-height: 112%;
-    text-transform: uppercase;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding-left: 81px;
-    margin-top: 79px;
-}
 
 .footer {
     display: block;
