--- a/styles/home.css
+++ b/styles/home.css
@@ -48,10 +48,17 @@
 }
 
 #tg-shape-btn {
+    position: relative;
     width: 160px;
     height: 30px;
     border-radius: 40px;
     background: linear-gradient(90deg, rgba(255, 0, 299) 0%, rgba(232, 20, 230) 35%, rgba(98, 135, 235) 100%);
+}
+
+.tg-img-svg{
+    position: absolute;
+    margin-left: -24px;
+    width: 34%;
 }
 
 #big-tg-shape-btn{
