--- a/styles/style.css
+++ b/styles/style.css
@@ -57,25 +57,27 @@ body {
     color: #FF00E5;
 }
 
-/* 
-.btn-primary:hover {
-    color: #fff;
-    background-color: #FF00E5;
-    border-color: #FF00E5;
-    border-radius: 30px;
-} */
-/* 
-.footer {
-    display: block;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
-    margin: 0;
-  } */
-
 a{
     text-decoration:none
+}
+
+.footer{
+    height: 100%;
+    width: 100%;
+    color: #ffff;
+}
+.footer-text{
+    text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .footer{
+        text-align: center;
+        color: #FFFF;
+    }
+    .logoimage{
+        width: auto;
+        margin: 5%;
+    }
+
 }
