--- a/styles/about.css
+++ b/styles/about.css
@@ -4,3 +4,7 @@
     justify-content: center;
     align-items: center;
 }
+
+.second-row{
+    background: linear-gradient(185deg, rgba(5, 5, 5) 12%, rgba(38, 5, 38) 50%);
+}
