--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background:  linear-gradient(109.27deg, #000000 4.13%, #050110 96.45%);
+  /* background: linear-gradient(109.27deg, #000000 4.13%, #050110 96.45%); */
   transition: 0.3s;
   z-index: 999;
 }
@@ -283,7 +283,10 @@ h6 {
   left: 15px;
   padding: 10px 0;
   border-radius: 10px;
-  background-color: #fff;
+  border: 1px solid rgba(255,255,255,0.3);
+  background-color: rgba(0, 0, 0, 0.673);
+  box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+  backdrop-filter: blur(5px);
   overflow-y: auto;
   transition: 0.3s;
 }
@@ -292,7 +295,7 @@ h6 {
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #86197b;
+  color: #fff;
 }
 
 .navbar-mobile a:hover,
@@ -360,6 +363,35 @@ h6 {
 #hero .animated {
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
+
+#hero .btn-3 {
+  position: relative;
+  height: 60px;
+  width: 200px;
+  background: linear-gradient(90deg, #FF00E5 3.57%, #6287EB 97.5%);
+  border: none;
+  outline: none;
+  color:#fff;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 50px;
+  font-family: "poppins",sans-serif;
+  margin-bottom: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.bi-telegram {
+  margin-right: 20px;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media (max-width: 991px) {
   #hero {
@@ -587,7 +619,6 @@ h6 {
     text-transform: capitalize;
     display: flex;
     justify-content: center;
-    margin: auto;
   }
 }
 
@@ -763,7 +794,8 @@ font-family: "poppins",sans-serif;
 
 #hero-1 .content {
   margin-left: 100px;
-  font-size: 25px;
+  text-align: justify;
+  width: 91%;
 }
 
 #hero-1 span {
@@ -780,6 +812,10 @@ font-family: "poppins",sans-serif;
   margin-top: 50px;
 }
 
+#hero-1 h2 {
+  font-size: 30px;
+}
+
 #hero-1  .underline {
   margin-bottom: 100px;
 }
@@ -787,13 +823,13 @@ font-family: "poppins",sans-serif;
 #hero-1 h2 {
   color: #039BE5;
   margin-top: 30px;
-  font-size: 24px;
+  font-size: 30x;
   margin-bottom: 30px;
 }
 
 #hero-1 p {
   color: #fff;
-  width: 100%;
+  font-size: 20px;
 }
 
 #hero-1 ul 
@@ -817,6 +853,16 @@ font-family: "poppins",sans-serif;
   }
   #hero-1 .content {
     margin-left: 0px;
+    text-align: justify;
+  }
+  #hero-1 h2 {
+    font-size: 25px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+  #hero-1 p {
+    color: #fff;
+    font-size: 18px;
   }
 }
 
@@ -828,12 +874,19 @@ font-family: "poppins",sans-serif;
   }
 
   #hero-1 h2 {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 24px;
     margin-bottom: 30px;
   }
+  
   #hero-1 .content {
     margin-left: 0px;
+    text-align: justify;
+  }
+
+  #hero-1 p {
+    color: #fff;
+    font-size: 14px;
   }
 
 }
@@ -846,12 +899,21 @@ font-family: "poppins",sans-serif;
   }
   
    #hero-1 h1 {
-    font-size: 28px;
+    font-size: 30px;
     line-height: 36px;
     margin-top: 30px;  
   }
+  #hero-1 h2 {
+    font-size: 18px;
+  }
+
   #hero-1 .content {
     margin-left: 0px;
+    text-align: justify;
+  }
+  #hero-1 p {
+    color: #fff;
+    font-size: 13px;
   }
 }
 
